# lintrule

./: Cargo.toml  README.md  code.js  install.sh
.github/workflows/: lintrule.yml
.rules/: no-bugs.md
cli/: cli.json  config.ts  currentFilePath.ts  findRoot.ts  git.test.ts  git.ts  ignore.test.ts  ignore.ts  loc.ts  main.ts  rules.ts  version.ts  walkFiles.ts  walkTextFiles.ts
cli/cmds/: check.ts  estimate-billing.ts  init.ts  login.ts  secrets.ts  upgrade.ts
cli/cmds/check/: cmd.ts  rules.test.ts  rules.ts
rules/: dummy.md  good-types.md  no-bugs.md  no-customer-data.md
scripts/: release.ts
server/: openai.ts  server.ts  supabase.ts
server/handlers/: check.ts  login.ts
src/: main.rs
