[package]
name = "lintrule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest="0.11.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
colored = "2"
anyhow="1.0.51"
walkdir="2.3.2"
ignore="0.4.18"

[[bin]]
name = "lintrule"

